feat: align site with resume

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Joy Wang | Portfolio</title>
-  <meta name="description" content="Personal portfolio for Joy Wang featuring research, projects, and writing.">
+  <meta name="description" content="Personal portfolio for Joy (Ella) Wang featuring research, projects, and writing.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
@@ -14,24 +14,26 @@
   <header class="hero" id="top">
     <div class="hero__container">
       <nav class="top-nav">
-        <a class="top-nav__brand" href="#top">Joy Wang</a>
+        <a class="top-nav__brand" href="#top">Ella Wang</a>
         <div class="top-nav__links">
           <a href="#about">About</a>
           <a href="#experience">Experience</a>
+          <a href="#education">Education</a>
           <a href="#projects">Projects</a>
-          <a href="#writing">Writing</a>
+          <a href="#publications">Publications</a>
+          <a href="#skills">Skills</a>
           <a href="#contact">Contact</a>
         </div>
       </nav>
       <div class="hero__content">
-        <p class="hero__eyebrow">Applied Scientist · Product Builder</p>
-        <h1 class="hero__title">Designing human-centered AI solutions that scale ideas into impact.</h1>
+        <p class="hero__eyebrow">Applied Scientist · Portfolio Manager Intern</p>
+        <h1 class="hero__title">Designing resilient AI systems that weave research into real-world impact.</h1>
         <p class="hero__subtitle">
-          I combine rigorous research with full-stack execution to turn ambiguous problems into delightful, data-driven products.
+          M.S. candidate in Computer &amp; Information Science (Cornell University &amp; Technion) with experience spanning quantitative finance, urban informatics, and multi-agent LLM platforms.
         </p>
         <div class="hero__actions">
-          <a class="button button--primary" href="mailto:youremail@example.com">Say hello</a>
-          <a class="button button--ghost" href="#projects">View my work</a>
+          <a class="button button--primary" href="#contact">Connect with me</a>
+          <a class="button button--ghost" href="#projects">Explore projects</a>
         </div>
       </div>
     </div>
@@ -41,25 +43,25 @@
       <div class="section__inner">
         <div class="section__header">
           <h2>About</h2>
-          <p>Explorer at the intersection of research, product strategy, and user-driven storytelling.</p>
+          <p>Applied scientist and product builder translating complex systems into intuitive tools.</p>
         </div>
         <div class="about__grid">
           <div>
-            <p>Welcome! I’m Joy (Ella) Wang, a multidisciplinary builder blending AI research, product development, and narrative design. I love uncovering patterns in complex systems and translating them into intuitive experiences.</p>
-            <p>Most recently, I have focused on <strong>computer vision</strong> and <strong>knowledge-enabled large language models</strong>, shipping prototypes that help teams move faster from idea to insight.</p>
+            <p>Hello, I’m Ella (Joy) Wang. I specialize in building data-intensive platforms that bridge research, engineering, and design. My work spans large-scale quantitative trading systems, city-scale simulations, and multi-agent AI experiences.</p>
+            <p>I thrive when pairing human-centered discovery with rigorous experimentation—whether that means optimizing model pipelines, orchestrating cloud-native deployments, or crafting end-to-end product narratives.</p>
           </div>
           <div class="about__highlights">
             <h3>Highlights</h3>
             <ul>
-              <li>Built data workflows that cut research turnaround time by 45%.</li>
-              <li>Led cross-functional launches for products serving 20K+ users.</li>
-              <li>Published peer-reviewed research spanning human-computer interaction and ML safety.</li>
+              <li>Scaled equity research pipelines with AWS + Docker, cutting processing from 19s to 1.5s per ticker.</li>
+              <li>Co-developed LLM agents for real-time 3D scene generation with 2× evaluation gains.</li>
+              <li>Published research across responsible AI, computer vision, and architectural computing.</li>
             </ul>
           </div>
         </div>
         <div class="about__cta">
           <a class="button button--ghost" href="#experience">See experience</a>
-          <a class="button button--ghost" href="#contact">Download resume</a>
+          <a class="button button--ghost" href="#publications">Browse publications</a>
         </div>
       </div>
     </section>
@@ -68,99 +70,153 @@
       <div class="section__inner">
         <div class="section__header">
           <h2>Experience</h2>
-          <p>Where research rigor meets product velocity.</p>
+          <p>Delivering AI-powered products from research to production.</p>
         </div>
         <div class="timeline">
           <article class="timeline__item">
-            <span class="timeline__date">2023 — Present</span>
-            <h3>Senior Applied Scientist · Example Labs</h3>
-            <p>Prototyped multi-modal search experiences leveraging LLMs, increasing qualitative research efficiency by 60% across the org.</p>
+            <span class="timeline__date">Jul 2024 — Present</span>
+            <h3>Quant Research Intern (returning Portfolio Manager) · Tokio Marine Group</h3>
+            <p>New York, NY — AI Equity Team</p>
             <ul>
-              <li>Designed human-in-the-loop evaluation pipelines for safer deployments.</li>
-              <li>Partnered with product and design to shape experiment roadmap.</li>
+              <li>Built AWS-native data pipelines (EC2, S3, RDS, ECS) with Dockerized CI/CD, shrinking per-ticker processing from 19s to 1.5s.</li>
+              <li>Shipped full-stack research platforms (React, TypeScript, Node.js, PGVector) to surface insights for investment teams and clients in real time.</li>
+              <li>Designed systematic strategies achieving Sharpe ratios above 1.5 through disciplined backtesting.</li>
             </ul>
           </article>
           <article class="timeline__item">
-            <span class="timeline__date">2021 — 2023</span>
-            <h3>Product Manager · Insight Collective</h3>
-            <p>Launched analytics suite for enterprise clients, translating user interviews into actionable product strategy and KPI dashboards.</p>
+            <span class="timeline__date">Oct 2020 — Oct 2022</span>
+            <h3>Research &amp; Software Engineer Intern · MIT Media Lab (City Science Lab)</h3>
+            <p>Remote</p>
             <ul>
-              <li>Coached 5+ teams on rapid experimentation and data storytelling.</li>
-              <li>Drove adoption to 80% within first quarter post-launch.</li>
-            </ul>
-          </article>
-          <article class="timeline__item">
-            <span class="timeline__date">2018 — 2021</span>
-            <h3>Research Fellow · University Innovation Lab</h3>
-            <p>Investigated inclusive design principles and authored papers on ethical AI, presented at CHI and NeurIPS workshops.</p>
-            <ul>
-              <li>Built open-source tools for reproducible qualitative analysis.</li>
-              <li>Guest lectured on human-centered machine learning practices.</li>
+              <li>Developed reusable simulation frameworks (<a href="https://github.com/CityScienceLab-Shanghai">CityScope Shenzhen</a>) accelerating multi-city urban planning prototypes.</li>
+              <li>Built prosocial blockchain DApp (<a href="https://www.media.mit.edu/projects/socity-dao/overview/">SoCity</a>) in Rust and JavaScript, covering frontend, APIs, and smart contracts.</li>
             </ul>
           </article>
         </div>
       </div>
     </section>
 
-    <section class="section" id="projects">
+    <section class="section" id="education">
+      <div class="section__inner">
+        <div class="section__header">
+          <h2>Education</h2>
+          <p>Blending systems thinking with applied machine learning.</p>
+        </div>
+        <div class="timeline">
+          <article class="timeline__item">
+            <span class="timeline__date">2023 — 2025</span>
+            <h3>Cornell University &amp; Technion</h3>
+            <p>M.S. in Computer &amp; Information Science (Dual Degree), GPA: 3.9/4.0</p>
+            <ul>
+              <li>Coursework: Distributed Systems, Cloud Computing, Security &amp; Privacy, Generative Models.</li>
+            </ul>
+          </article>
+          <article class="timeline__item">
+            <span class="timeline__date">2019 — 2023</span>
+            <h3>Tongji University</h3>
+            <p>B.E. in Engineering · Minor in Artificial Intelligence, GPA: 3.9/4.0 (Top 1%)</p>
+            <ul>
+              <li>Coursework: Data Structures, Operating Systems, Networks, Databases, Machine Learning, NLP.</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--alt" id="projects">
       <div class="section__inner">
         <div class="section__header">
           <h2>Featured Projects</h2>
-          <p>A snapshot of experiments and shipped work.</p>
+          <p>Entrepreneurial experiments and research tooling.</p>
         </div>
         <div class="card-grid">
           <article class="card">
-            <h3>Atlas</h3>
-            <p>Interactive knowledge base that maps research artifacts, enabling teams to discover insights through semantic clustering.</p>
+            <h3>Lepus AI</h3>
+            <p>Founder-led computer vision platform detecting structural cracks from imagery and LiDAR.</p>
             <ul>
-              <li>Stack: Next.js, TypeScript, Pinecone, OpenAI API</li>
-              <li>Role: Product strategy, data modeling, UX research</li>
+              <li>Models: SAM, BLIP, CLIP, CLIPSeg, Grounding DINO, UNet-VGG16.</li>
+              <li>+31% accuracy lift; commercialized with UrbanTech Consulting Engineering P.C.</li>
+              <li>Containerized pipelines on GCP/AWS with Kubernetes and Docker.</li>
             </ul>
-            <a class="card__link" href="#" aria-label="View Atlas project">Case study →</a>
+            <a class="card__link" href="https://www.lepus-ai.tech/" aria-label="View Lepus AI project">Website →</a>
           </article>
           <article class="card">
-            <h3>Grounded Vision</h3>
-            <p>Computer vision prototype pairing object detection with natural language references for field inspection teams.</p>
+            <h3>Alice AI</h3>
+            <p>Multi-agent LLM framework for real-time 3D scene generation in game engines.</p>
             <ul>
-              <li>Cut manual reporting by 6 hours per week per team.</li>
-              <li>Piloted with 3 enterprise partners.</li>
+              <li>Supported by Millennium &amp; Cornell ICPC.</li>
+              <li>Fine-tuned LLaMA-3-8B and Mistral-7B with QLoRA; doubled evaluation scores.</li>
+              <li>Explored collaborative agent orchestration for creative tooling.</li>
             </ul>
-            <a class="card__link" href="#" aria-label="View Grounded Vision project">Demo →</a>
+            <a class="card__link" href="https://alicellm.github.io/index.html" aria-label="Explore the Alice AI website">Website →</a>
+            <a class="card__link" href="https://github.com/JoyJoyWang/Papers/blob/main/ALICE_Final.pdf" aria-label="Read the Alice AI paper">Paper →</a>
           </article>
           <article class="card">
-            <h3>Curator</h3>
-            <p>Writing assistant that scaffolds research synthesis, helping analysts turn notes into narratives in minutes.</p>
+            <h3>Equity Research Platform</h3>
+            <p>Internal SaaS delivering actionable quant research insights to investment teams.</p>
             <ul>
-              <li>Shipped as internal beta with 200+ active users.</li>
-              <li>Built evaluative rubric for responsible AI usage.</li>
+              <li>Stacks: React, TypeScript, Node.js, REST APIs, PGVector.</li>
+              <li>Real-time query workflows with guardrailed LLM components.</li>
             </ul>
-            <a class="card__link" href="#" aria-label="View Curator project">Read more →</a>
+            <a class="card__link" href="https://www.youtube.com/watch?v=QoVmoLbToVw" aria-label="Watch the equity research platform demo">Case study →</a>
           </article>
         </div>
       </div>
     </section>
 
-    <section class="section section--alt" id="writing">
+    <section class="section" id="publications">
       <div class="section__inner">
         <div class="section__header">
-          <h2>Writing &amp; Talks</h2>
-          <p>Ideas on research craft, AI, and building intentional teams.</p>
+          <h2>Publications</h2>
+          <p>Collaborative research across LLM safety, computer vision, and urban informatics.</p>
         </div>
         <div class="writing-list">
           <article class="writing-list__item">
-            <span class="writing-list__date">Jan 2024</span>
-            <a href="#">Designing guardrails for qualitative AI tooling</a>
-            <p>Framework for balancing velocity with responsible deployment.</p>
+            <span class="writing-list__date">2026 (submitted)</span>
+            <a href="https://github.com/JoyJoyWang">CTR-LoRA: Curvature-Aware and Trust-Region Guided Low-Rank Adaptation for Large Language Models</a>
+            <p>Submitted to ICASSP 2026. Equal contribution with Mo M., Xiao X., and collaborators.</p>
           </article>
           <article class="writing-list__item">
-            <span class="writing-list__date">Sep 2023</span>
-            <a href="#">Weaving narrative into product roadmaps</a>
-            <p>Talk at Product-led Summit on aligning storytelling with analytics.</p>
+            <span class="writing-list__date">2025 (submitted)</span>
+            <a href="https://github.com/CityScienceLab-Shanghai">PROBE: Self-Supervised Visual Prompting for Cross-Domain Road Damage Detection</a>
+            <p>Submitted to WACV 2025. Equal contribution with Xiao X., Mo M., and collaborators.</p>
           </article>
           <article class="writing-list__item">
-            <span class="writing-list__date">May 2023</span>
-            <a href="#">Field notes from human-centered ML research</a>
-            <p>Lessons learned while bridging research and applied science teams.</p>
+            <span class="writing-list__date">2024</span>
+            <a href="https://www.youtube.com/watch?v=QoVmoLbToVw">Color Harmony of Historical Buildings via Street View Image</a>
+            <p>Frontiers of Architectural Research, 2024. Co-authored with Yang R., Deng X., Shi H., and team.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--alt" id="skills">
+      <div class="section__inner">
+        <div class="section__header">
+          <h2>Skills</h2>
+          <p>Full-stack toolkit for research, engineering, and deployment.</p>
+        </div>
+        <div class="card-grid">
+          <article class="card">
+            <h3>Languages &amp; Frameworks</h3>
+            <ul>
+              <li>Python, C++, Java, JavaScript, TypeScript, SQL.</li>
+              <li>React, Node.js, Spring Boot.</li>
+            </ul>
+          </article>
+          <article class="card">
+            <h3>Data &amp; Infrastructure</h3>
+            <ul>
+              <li>AWS, PostgreSQL, MySQL, PGVector.</li>
+              <li>Docker, Kubernetes, Terraform, Jenkins, GitHub Actions.</li>
+            </ul>
+          </article>
+          <article class="card">
+            <h3>Product &amp; Delivery</h3>
+            <ul>
+              <li>Git, Agile/Scrum, experiment design.</li>
+              <li>Testing (unit &amp; integration), cross-functional collaboration.</li>
+            </ul>
           </article>
         </div>
       </div>
@@ -170,20 +226,20 @@
       <div class="section__inner">
         <div class="section__header">
           <h2>Let’s collaborate</h2>
-          <p>Interested in partnering, speaking, or just swapping ideas? Reach out.</p>
+          <p>Interested in partnerships, research, or product collaborations? Reach out.</p>
         </div>
         <div class="contact">
           <div>
-            <h3>Contact</h3>
-            <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-            <p>Location: Open to remote &amp; hybrid roles worldwide</p>
+            <h3>Preferred Contact</h3>
+            <p>Send a message on LinkedIn or GitHub to start the conversation. I’m happy to share direct contact details once we connect.</p>
+            <p>Based in New York · Open to remote and hybrid roles worldwide.</p>
           </div>
           <div>
             <h3>Links</h3>
             <ul>
-              <li><a href="#">LinkedIn</a></li>
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Substack</a></li>
+              <li><a href="https://www.linkedin.com/in/ella-w-5205a9375">LinkedIn</a></li>
+              <li><a href="https://github.com/JoyJoyWang">GitHub</a></li>
+              <li><a href="https://github.com/JoyJoyWang/Papers/blob/main/ALICE_Final.pdf">Resume (PDF)</a></li>
             </ul>
           </div>
         </div>
