change the account name

--- a/about.html
+++ b/about.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Ella Wang</title>
+  <title>About | Ella Zhuxuanzi Wang</title>
   <meta name="description" content="AI Safety researcher working on model alignment, interpretability, and safety evaluations.">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="header-content">
-      <a href="index.html" class="site-title">Ella Wang</a>
+      <a href="index.html" class="site-title">Ella Zhuxuanzi Wang</a>
       <nav>
         <ul>
           <li><a href="index.html">Posts</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="about.html" class="active">About</a></li>
-          <li><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">🌙</button></li>
         </ul>
       </nav>
     </div>
@@ -140,9 +139,9 @@
     <section class="section">
       <h2>Contact</h2>
       <ul>
-        <li><a href="https://github.com/JoyJoyWang">GitHub</a></li>
+        <li><a href="https://github.com/zhuxuanziwang">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/ella-w-5205a9375">LinkedIn</a></li>
-        <li><a href="https://github.com/JoyJoyWang/Papers/blob/main/ALICE_Final.pdf">CV (PDF)</a></li>
+        <li><a href="https://github.com/zhuxuanziwang/Papers/blob/main/ALICE_Final.pdf">CV (PDF)</a></li>
       </ul>
       <p>Based in New York, NY. Open to research collaborations and opportunities in AI Safety.</p>
     </section>
@@ -151,14 +150,12 @@
   <footer>
     <div class="footer-content">
       <ul class="footer-links">
-        <li><a href="https://github.com/JoyJoyWang" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/zhuxuanziwang" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/ella-w-5205a9375" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/JoyJoyWang/Papers/blob/main/ALICE_Final.pdf" target="_blank">CV</a></li>
+        <li><a href="https://github.com/zhuxuanziwang/Papers/blob/main/ALICE_Final.pdf" target="_blank">CV</a></li>
       </ul>
-      <p>&copy; 2025 Ella Wang</p>
+      <p>&copy; 2025 Ella Zhuxuanzi Wang</p>
     </div>
   </footer>
-
-  <script src="theme.js"></script>
 </body>
 </html>
